# shunt

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yaml  mkdocs.yml  pyproject.toml  whitelist_vulture.py
.github/workflows/: ci.yml  docs.yml  integration-handshake.yml  provider-auth-check.yml  provider-probe.yml  release.yml
benchmark/: .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  __init__.py  benchmark.yaml  compose.yaml  config.py  config.yaml  validate_config.py
benchmark/calibration/: __init__.py  eval_labeler.py  labeler_metrics.py  labels.template.yaml
benchmark/challenges/swebench_verified/: astropy__astropy-12907.json  astropy__astropy-13033.json  astropy__astropy-13236.json  astropy__astropy-13398.json  astropy__astropy-13453.json  astropy__astropy-13579.json  astropy__astropy-13977.json  astropy__astropy-14096.json  astropy__astropy-14182.json  astropy__astropy-14309.json  astropy__astropy-14365.json  astropy__astropy-14369.json  astropy__astropy-14508.json  astropy__astropy-14539.json  astropy__astropy-14598.json  astropy__astropy-14995.json  astropy__astropy-7166.json  astropy__astropy-7336.json  astropy__astropy-7606.json  astropy__astropy-7671.json  (+480 more)
benchmark/routing/: README.md  __init__.py  authenticity.py  coverage.py  exploration_replay.py  frontier_estimate.py  heldout_eval.py  integrity.py  metrics.py  online_kill_gate.py  plot_style.py  report.py  results.csv  run_eval.py  summary.py
benchmark/runner/: __init__.py  build_challenges.py  build_external_prior.py  calibration.py  check_integrity.py  collect.py  image_version.py  infer.py  kill_gate.py  run_matrix.py  sampling.py  select_pilot.py  select_swebench.py  swebench_harness.py  swebench_smoke.py  swebench_specs.py
docs/: architecture.md  benchmark-design.md  benchmark.md  configuration.md  escalation.md  feedback.md  index.md
docs/decisions/: index.md
examples/integrations/: README.md  compose.base.yaml
examples/providers/: README.md  cerebras.yaml  deepseek.yaml  fireworks.yaml  groq.yaml  local.yaml  mistral.yaml  nebius.yaml  openai.yaml  openrouter.yaml  requesty.yaml  together.yaml  xai.yaml
src/shunt/: __init__.py  __main__.py  cli.py  log_config.py  secrets.py
tests/: __init__.py  conftest.py  fake_embedder.py  mock_openai_server.py  test_analysis_scripts.py  test_arm_cache_adversarial.py  test_arm_sampling_gate.py  test_authenticity.py  test_cache_regression.py  test_calibration.py  test_cli_flag.py  test_collect.py  test_dotenv.py  test_examples_sync.py  test_exploration_replay.py  test_external_build.py  test_frontier_estimate.py  test_heldout.py  test_integrations_sync.py  test_integrity.py  test_kill_gate.py  test_knn_blended.py  test_labeler_metrics.py  test_log_config.py  test_metrics.py  test_online_kill_gate.py  test_plot_scale.py  test_plot_style.py  test_pricing.py  test_provider_probe.py  test_report_plots.py  test_run_matrix_parallel.py  test_run_matrix_strategy.py  test_sampling.py  test_select_pilot.py  test_strategies.py  test_summary.py  test_swebench.py  test_tier_coherence.py
tests/capture/: test_coordinator.py  test_refit.py  test_wire_tier1.py  test_workdir_resolver.py  test_worker.py
tests/cli/: test_reindex.py  test_router_flag_overrides.py
tests/config/: test_packaged_config_bundling.py
tests/db/: test_active_learning_gate.py  test_index.py  test_index_concurrency.py  test_index_holds_only_labeled.py  test_loop_health.py  test_non_policy_readback.py  test_outcome_index.py  test_rebuild_index_race.py  test_reindex_corpus.py  test_router_state.py  test_schema.py  test_schema_v2_store.py  test_session_reindex.py  test_store.py
tests/integrations/: Dockerfile.fake  Dockerfile.shunt  fake_registry.yaml  fake_router.yaml  fake_upstream.py  test_handshake.py
tests/lint/: test_lint_checks.py
tests/models/: test_config.py  test_reasoning_next_arm.py
tests/proxy/: test_actionable_failures.py  test_anthropic_tool_translation.py  test_bad_request_body.py  test_cache_metrics.py  test_config_disclosure.py  test_cost_ingestion.py  test_decision_offloads_event_loop.py  test_embedding_trust_legacy.py  test_engine_wiring.py  test_error_leakage_wiring.py  test_escalation_persistence_wiring.py  test_loop_health_endpoint.py  test_reasoning_arm.py  test_redaction.py  test_redaction_coverage.py  test_router.py  test_routing_text.py  test_session_persist_provenance.py  test_startup_disclosure.py  test_stream_error_leakage.py  test_tool_forwarding.py  test_wire_signal_collector.py
tests/router/: conftest.py  test_budget.py  test_budget_boundaries.py  test_budget_persistence.py  test_cold_start.py  test_cold_start_effective.py  test_conservative_gate_reachability.py  test_debug_trace.py  test_effective_sample_size.py  test_embedder.py  test_embedder_cache_dir.py  test_embedder_clipping.py  test_embedding_config.py  test_embedding_pipeline_ci.py  test_engine.py  test_engine_concurrency.py  test_engine_escalation.py  test_engine_escalation_effort.py  test_engine_exploration.py  test_escalation.py  test_escalation_b6.py  test_escalation_bugfixes.py  test_escalation_concurrency.py  test_escalation_ladder.py  test_escalation_snapshot_restore.py  test_exploration.py  test_exploration_state_persistence.py  test_fake_embedder_fidelity.py  test_pending.py  test_policy.py  test_prior_from_estimate.py  test_provenance.py  test_representative_cost.py  test_router_yaml_malformed.py  test_selection.py  test_strategies.py
tests/session/: test_identity_scope.py  test_inactivity_semantics.py  test_session.py
tests/verifiers/: test_aggregator.py  test_entropy.py  test_env_failure.py  test_real_subprocess_escalation.py  test_rerun_confirming.py  test_tier1.py  test_tier2.py
tools/: provider_auth_signatures.yaml  provider_probe.py
tools/lint/: _shared.py  check_docstring_length.py  check_import_direction.py  check_internal_refs.py  check_mutable_globals.py  check_pricing_isolation.py  check_syspath.py
(+112 files in other folders)
