[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "shunt-router"
version = "0.0.0"
description = "Tool-agnostic, cache-safe LLM router that decides which model handles a request from verified outcomes."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "KookaS" }]
keywords = ["llm", "router", "gateway", "proxy", "cost-optimization", "anthropic", "openai"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "litellm>=1.55",
  "fastembed>=0.4",
  "hnswlib>=0.8",
  "scikit-learn>=1.5",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.13"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.urls]
Homepage = "https://github.com/KookaS/shunt"
Repository = "https://github.com/KookaS/shunt"

[project.scripts]
shunt = "shunt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
